15525
hi,

i get the following error although the line is commented out:

{code}
Welcome to Scala version 2.8.0.final (Java HotSpot(TM) Client VM, Java 1.6.0_20).
Type in expressions to have them evaluated.
Type :help for more information.

scala> // .replace( "\u000D", "" )
<console>:1: error: unclosed string literal
       // .replace( "\u000D", "" )
                               ^
{code}

expected behaviour: anything after double forward slash should be ignored by the compiler.

note that this only affects single line comments, as this works:

{code}
/* .replace( "\u000D", "" ) */
{code}
